Preparação para produção usando Heroku.

--- a/algamoneyfel-api/src/main/resources/application-prod.properties
+++ b/algamoneyfel-api/src/main/resources/application-prod.properties
@@ -1,3 +1,10 @@
 #Vindo da classe algamoneyfelapiproperts na notação @ConfigurationProperties
 #Quando estiver rodando no Heroko trocar para true senao trocar para false
 algamoneyfelapi.seguranca.enable-https=true
+
+#Values criados para o Heroku 
+spring.datasource.url={JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_DATABASE_USERNAME}
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
+
+algamoneyfelapi.origin-permitida=https://algamoneyfel-angular.herokuapp.com
