--- a/algamoneyfel-api/src/main/resources/application-prod.properties
+++ b/algamoneyfel-api/src/main/resources/application-prod.properties
@@ -7,4 +7,4 @@ spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-algamoneyfelapi.origin-permitida=https://algamoneyfel-api.herokuapp.com/
+algamoneyfelapi.origin-permitida=https://algamoneyfel-api.herokuapp.com
